# atapi

./: .gitignore  LICENSE.txt  Makefile  README.md  atf.py  index.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflow/: python-package.yaml
.github/workflows/: codeql-analysis.yml  python-package.yml
atapi/: __init__.py  __main__.py  api.py  app.py  atapi.py
atapi/cmp/: __init__.py  algo.py
atapi/comp/: __init__.py  algo.py
atapi/eps/: data.py
atf/: __init__.py  atf.ipynb  atf.py
tests/: test_atapi.py  test_atf.py  visualize.ipynb
