[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
authors = [{ name = "Miron Tewfik", email = "miron@street.yoga" }]
maintainers = [{ name = "streetyoga.capital", email = "miron@street.yoga" }]

[project]
name = "atf"
description = "Algorithmic Trading Framework"
readme = "README.md"
license = { file = "LICENSE.txt" }
dependencies = ["pandas", "binance-connector", "scipy", "requests"]
dynamic = ["version"]
requires-python = ">=3.5"

[project.optional-dependencies]
dev = ["flake8", "pytest"]


[project.urls]
homepage = "https://street.yoga"
documentation = "https://github.com/streetyoga/atf/wiki/Documentation"
repository = "https://github.com/streetyoga/atf"

# test:
# 	find . -name '*.pyc' -exec rm -f {} \;
# 	./env/bin/flake8 atf tests
# 	./env/bin/python3 -m pytest \
# 	    --doctest-modules \
# 	    --disable-warnings \
# 	    --verbose \
# 	    atf tests
