[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "atf"
description = "Algorithmic Trading Framework"
readme = "README.md"
license = { file = "LICENSE.txt" }
dynamic = ["version"]
requires-python = ">=3.6"
authors = [{ name = "Miron Tewfik", email = "miron@street.yoga" }]
dependencies = ["pandas", "binance-connector", "scipy", "requests"]

[project.optional-dependencies]
dev = ["flake8", "pytest"]

[project.urls]
homepage = "https://street.yoga"
documentation = "https://github.com/streetyoga/atf/wiki/Documentation"
repository = "https://github.com/streetyoga/atf"

[tool.setuptools.dynamic]
version = { attr = "atf.__version__" }

# test:
# 	find . -name '*.pyc' -exec rm -f {} \;
# 	./env/bin/flake8 atf tests
# 	./env/bin/python3 -m pytest \
# 	    --doctest-modules \
# 	    --disable-warnings \
# 	    --verbose \
# 	    atf tests
